# tailbus

./: .gitignore  .goreleaser.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  demo.tape  docker-compose.yml  fly.toml  go.mod  go.sum  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/agentpb/: agent.pb.go  agent_grpc.pb.go
api/coordpb/: coord.pb.go  coord_grpc.pb.go
api/messagepb/: messages.pb.go
api/transportpb/: transport.pb.go  transport_grpc.pb.go
cmd/tailbus/: agent.go  agent_test.go  attach.go  dashboard.go  dashboard_test.go  main.go  up.go
cmd/tailbus-coord/: main.go
cmd/tailbus-relay/: main.go
cmd/tailbusd/: main.go
doc/: README.md  show-hn.md
examples/: README.md
examples/agent-swarm/: README.md  main.go  run.sh
examples/app-builder/: README.md  app.js  index.html  run.sh  styles.css
examples/chat-room/: README.md  chat.py  chat_agent.py  chat_agent_test.py  run.sh
examples/cli-tools/: README.md  run.sh
examples/dev/: relay.toml
examples/dev-task-room/: README.md  critic.py  critic_test.py  dev_task_common.py  dev_task_common_test.py  focus_timer.py  implementer.py  orchestrator.py  run.sh  snake.py  snake_game.py  test_strategist.py  workspace_agent.py
examples/docker/: echo_agent.py  (+2 more)
internal/: integration_test.go  relay_integration_test.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/tailbus/: __init__.py  _agent.py  _protocol.py  _sync.py
sdk/python/tests/: test_agent.py  test_protocol.py
(+82 files in other folders)
